--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name=".Application"
         android:label="Green Pakistan"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@drawable/icon">
 
         <meta-data android:name="com.google.android.geo.API_KEY"
                    android:value="YOUR GOOGLE API KEY"/>
