--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   url_launcher: ^4.2.0+3
   firebase_messaging: ^6.0.1
   firebase_analytics: ^4.0.2
+  cached_network_image: ^2.0.0
+  argon_buttons_flutter: ^1.0.2
+  flutter_spinkit: ^4.1.2
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +85,7 @@ flutter:
     - assets/img/wallet.png
     - assets/img/cash.png
     - assets/img/pay_pickup.png
+    - assets/img/pak.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
